--- a/projects/lms/src/index.html
+++ b/projects/lms/src/index.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <title>Lms</title>
   <base href="/">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
